--- a/public/login.html
+++ b/public/login.html
@@ -7,48 +7,120 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 font-sans">
-  <!-- Container -->
-  <div class="min-h-screen flex items-center justify-center px-4">
-    <div class="flex flex-col lg:flex-row gap-12 items-center max-w-6xl w-full">
-      
-      <!-- Left Branding -->
-      <div class="flex-1 text-center lg:text-left">
-        <h1 class="text-sky-500 text-5xl font-bold mb-4">JobMatch</h1>
-        <p class="text-gray-700 text-lg leading-relaxed">
-          Connect with top companies and find your dream job through JobMatch.
-        </p>
-      </div>
+  <!-- Wrapper -->
+  <div class="flex min-h-screen items-center justify-center">
+    <!-- Left panel -->
+    <div class="hidden md:flex flex-col justify-center items-start w-1/2 px-10">
+      <h1 class="text-sky-500 text-5xl font-bold mb-4">JobMatch</h1>
+      <p class="text-slate-700 text-xl font-semibold w-3/4">
+        Find your dream job and connect with companies quickly and easily.
+      </p>
+    </div>
 
-      <!-- Right Login Card -->
-      <div class="bg-white rounded-lg shadow-md p-8 w-full max-w-sm">
-        <h2 class="text-2xl font-bold text-center text-gray-800 mb-6">Log In to JobMatch</h2>
-        <input type="email" id="email" placeholder="Email address" class="w-full border border-gray-300 p-3 rounded mb-4 focus:outline-none focus:ring-2 focus:ring-sky-400" />
-        <input type="password" id="password" placeholder="Password" class="w-full border border-gray-300 p-3 rounded mb-4 focus:outline-none focus:ring-2 focus:ring-sky-400" />
-        <button onclick="login()" class="w-full bg-sky-500 hover:bg-sky-600 text-white font-semibold py-2 rounded transition duration-300">Log In</button>
-        <p class="text-sm text-center text-gray-500 mt-4">
-          Don't have an account? <a href="signup.html" class="text-sky-600 font-medium hover:underline">Sign up</a>
-        </p>
-      </div>
+    <!-- Right login panel -->
+    <div class="bg-white shadow-lg p-8 rounded-lg w-full max-w-sm">
+      <h2 class="text-2xl font-bold text-sky-600 mb-6 text-center">Login to JobMatch</h2>
 
+      <input type="email" id="email" placeholder="Email" class="mb-4 w-full border p-2 rounded" />
+      <input type="password" id="password" placeholder="Password" class="mb-4 w-full border p-2 rounded" />
+
+      <select id="role" class="w-full border p-2 rounded mb-6">
+        <option value="jobseeker">Job Seeker</option>
+        <option value="company">Company</option>
+      </select>
+
+      <button id="loginBtn" class="w-full bg-sky-500 text-white py-2 rounded hover:bg-sky-600">
+        Login
+      </button>
+
+      <p class="mt-4 text-center text-sm text-slate-600">
+        Don’t have an account?
+        <a href="#" id="signupLink" class="text-sky-500 font-semibold">Create Account</a>
+      </p>
+    </div>
+  </div>
+
+  <!-- Signup Modal -->
+  <div id="signupModal" class="hidden fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 z-50">
+    <div class="bg-white p-6 rounded-lg w-full max-w-md shadow-md">
+      <h2 class="text-xl font-bold text-sky-600 mb-4 text-center">Create Account</h2>
+      <input id="signupEmail" type="email" placeholder="Email" class="mb-3 w-full border p-2 rounded" />
+      <input id="signupPassword" type="password" placeholder="Password" class="mb-3 w-full border p-2 rounded" />
+      <select id="signupRole" class="w-full border p-2 rounded mb-4">
+        <option value="jobseeker">Job Seeker</option>
+        <option value="company">Company</option>
+      </select>
+
+      <div class="flex justify-end gap-3">
+        <button id="cancelSignup" class="px-4 py-2 bg-gray-300 rounded hover:bg-gray-400">Cancel</button>
+        <button id="registerBtn" class="px-4 py-2 bg-sky-500 text-white rounded hover:bg-sky-600">Register</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Alert Modal -->
+  <div id="alertModal" class="hidden fixed inset-0 flex items-center justify-center bg-black bg-opacity-40 z-50">
+    <div class="bg-white rounded-lg shadow-lg max-w-sm w-full p-6 text-center">
+      <h2 class="text-lg font-bold text-red-600 mb-2">Login Failed</h2>
+      <p class="text-sm text-gray-700 mb-4">Incorrect email, password, or role. Please try again.</p>
+      <button id="closeAlert" class="bg-sky-500 hover:bg-sky-600 text-white px-4 py-2 rounded">Close</button>
     </div>
   </div>
 
   <script>
-    function login() {
-  const email = document.getElementById('email').value.trim();
-  const password = document.getElementById('password').value;
+    document.getElementById("signupLink").addEventListener("click", () => {
+      document.getElementById("signupModal").classList.remove("hidden");
+    });
 
-  const users = JSON.parse(localStorage.getItem("users")) || {};
+    document.getElementById("cancelSignup").addEventListener("click", () => {
+      document.getElementById("signupModal").classList.add("hidden");
+    });
 
-  if (users[email] === password) {
-    localStorage.setItem("isLoggedIn", "true");
-    localStorage.setItem("userEmail", email);
-    window.location.href = "index.html";
-  } else {
-    alert("Invalid email or password.");
-  }
-}
+    document.getElementById("closeAlert").addEventListener("click", () => {
+      document.getElementById("alertModal").classList.add("hidden");
+    });
 
+    document.getElementById("registerBtn").addEventListener("click", () => {
+      const email = document.getElementById("signupEmail").value.trim();
+      const password = document.getElementById("signupPassword").value;
+      const role = document.getElementById("signupRole").value;
+
+      if (!email || !password) {
+        alert("Please fill out all fields.");
+        return;
+      }
+
+      const users = JSON.parse(localStorage.getItem("users") || "[]");
+      if (users.find(u => u.email === email)) {
+        alert("User already exists!");
+        return;
+      }
+
+      users.push({ email, password, role });
+      localStorage.setItem("users", JSON.stringify(users));
+      alert("Account created successfully. You can now log in.");
+      document.getElementById("signupModal").classList.add("hidden");
+    });
+
+    document.getElementById("loginBtn").addEventListener("click", () => {
+      const email = document.getElementById("email").value.trim();
+      const password = document.getElementById("password").value;
+      const role = document.getElementById("role").value;
+
+      const users = JSON.parse(localStorage.getItem("users") || "[]");
+      const user = users.find(u => u.email === email && u.password === password && u.role === role);
+
+      if (!user) {
+        document.getElementById("alertModal").classList.remove("hidden");
+        return;
+      }
+
+      localStorage.setItem("isLoggedIn", "true");
+      localStorage.setItem("userEmail", email);
+      localStorage.setItem("userRole", role);
+
+      window.location.href = role === "company" ? "company-dashboard.html" : "index.html";
+    });
   </script>
 </body>
 </html>
