--- a/public/company-dashboard.html
+++ b/public/company-dashboard.html
@@ -47,6 +47,19 @@
     <div id="postedJobsContainer" class="space-y-4"></div>
   </div>
 
+  <!-- Delete Confirmation Modal -->
+  <div id="confirmModal" class="fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center hidden">
+    <div class="bg-white rounded-lg shadow-lg p-6 max-w-sm w-full text-center">
+      <h2 class="text-lg font-semibold text-red-600 mb-2">Delete Job</h2>
+      <p class="text-sm text-gray-600 mb-4">Are you sure you want to delete this job posting?</p>
+      <div class="flex justify-center gap-4">
+        <button onclick="cancelDelete()" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">Cancel</button>
+        <button onclick="confirmDelete()" class="px-4 py-2 bg-red-500 text-white rounded hover:bg-red-600">Delete</button>
+      </div>
+    </div>
+  </div>
+
+
   <script>
     const userRole = localStorage.getItem("userRole");
     if (!localStorage.getItem("isLoggedIn") || userRole !== "company") {
@@ -145,13 +158,26 @@
       });
     }
   
+    let jobIdToDelete = null;
+
     function deleteJob(jobId) {
-      if (!confirm("Are you sure you want to delete this job?")) return;
+      jobIdToDelete = jobId;
+      document.getElementById("confirmModal").classList.remove("hidden");
+    }
+
+    function confirmDelete() {
       const jobs = JSON.parse(localStorage.getItem('jobPosts') || '[]');
-      const updatedJobs = jobs.filter(job => job.id !== jobId);
+      const updatedJobs = jobs.filter(job => job.id !== jobIdToDelete);
       localStorage.setItem('jobPosts', JSON.stringify(updatedJobs));
+      document.getElementById("confirmModal").classList.add("hidden");
       displayPostedJobs();
     }
+
+    function cancelDelete() {
+      jobIdToDelete = null;
+      document.getElementById("confirmModal").classList.add("hidden");
+    }
+
   
     function editJob(jobId) {
       const jobs = JSON.parse(localStorage.getItem('jobPosts') || '[]');
