--- a/public/account.html
+++ b/public/account.html
@@ -9,102 +9,100 @@
 </head>
 <body class="bg-gray-100 font-sans min-h-screen flex flex-col text-sm md:text-base">
 
-
-  <!-- Notification Card -->
-  <div id="cvPopup" class="fixed inset-0 z-50 hidden bg-black bg-opacity-50 flex items-center justify-center">
-    <div class="bg-white max-w-sm w-[90%] rounded-lg shadow-lg p-6 text-center">
-      <h2 class="text-xl font-semibold text-red-600 mb-2">CV Required</h2>
-      <p class="text-sm text-gray-600 mb-4">Please upload your CV before applying for jobs.</p>
-      <div class="flex justify-center gap-4">
-        <button onclick="document.getElementById('cvPopup').classList.add('hidden')" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400">Close</button>
-        <a href="account.html" class="bg-sky-500 text-white px-4 py-2 rounded hover:bg-sky-600">Go to Account</a>
-      </div>
+ <!-- Notification Card -->
+ <div id="cvPopup" class="fixed inset-0 z-50 hidden bg-black bg-opacity-50 flex items-center justify-center">
+  <div class="bg-white max-w-sm w-[90%] rounded-lg shadow-lg p-6 text-center">
+    <h2 class="text-xl font-semibold text-red-600 mb-2">CV Required</h2>
+    <p class="text-sm text-gray-600 mb-4">Please upload your CV before applying for jobs.</p>
+    <div class="flex justify-center gap-4">
+      <button onclick="document.getElementById('cvPopup').classList.add('hidden')" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400">Close</button>
+      <a href="account.html" class="bg-sky-500 text-white px-4 py-2 rounded hover:bg-sky-600">Go to Account</a>
     </div>
   </div>
+</div>
 
-  <!-- Navbar -->
-  <nav class="flex justify-between items-center p-6 bg-white shadow text-[16px]" id="home">
-    <div class="logo-div">
-      <h1 class="logo text-2xl text-sky-400 font-bold">
-        <strong>Job</strong>Match
-      </h1>
-    </div>
-    <div class="menu">
-      <ul class="flex gap-6 text-slate-600 font-medium">
-        <li class="hover:text-sky-500 cursor-pointer">
-          <a href="index.html">Home</a>
-        </li>
-        <!-- <li class="hover:text-sky-500 cursor-pointer">
-          <a href="company.html">Companies</a>
-        </li> -->
-        <!-- <li class="hover:text-sky-500 cursor-pointer">
-          <a href="#semangat">Tips</a>
-        </li> -->
-        <li class="hover:text-sky-500 cursor-pointer">
-          <a href="saved.html">Saved Jobs</a>
-        </li>
-        <li class="hover:text-sky-500 cursor-pointer">
-          <a href="#footer">Contact</a>
-        </li>
-        <li class="text-sky-500 font-semibold cursor-pointer">
-          <a href="#">Account</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+<!-- Navbar -->
+<nav class="flex justify-between items-center p-6 bg-white shadow text-[16px]" id="home">
+  <div class="logo-div">
+    <h1 class="logo text-2xl text-sky-400 font-bold">
+      <strong>Job</strong>Match
+    </h1>
+  </div>
+  <div class="menu">
+    <ul class="flex gap-6 text-slate-600 font-medium">
+      <li class="hover:text-sky-500 cursor-pointer">
+        <a href="index.html">Home</a>
+      </li>
+      <li class="hover:text-sky-500 cursor-pointer">
+        <a href="saved.html">Saved Jobs</a>
+      </li>
+      <li class="hover:text-sky-500 cursor-pointer">
+        <a href="#footer">Contact</a>
+      </li>
+      <li class="text-sky-500 font-semibold cursor-pointer">
+        <a href="#">Account</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
-  <!-- Main Content -->
-  <div class="flex-grow">
-    <div class="max-w-4xl mx-auto mt-10 bg-white rounded-lg shadow-md p-8">
-      <div class="flex flex-col items-center">
-        <img id="profileImage" src="img/pp.JPG" alt="Profile" class="w-28 h-28 rounded-full border mb-4" />
-        <h2 id="name" class="text-2xl font-semibold">John Doe</h2>
-        <p id="email" class="text-gray-500">john.doe@example.com</p>
-        <p id="bio" class="mt-2 text-center">Network Engineer with 5 years of experience</p>
-        <p id="phone" class="text-gray-600 mt-1">+62 812-3456-7890</p>
-        <div class="mt-2">
-          <span class="font-medium">CV:</span> <span id="cvFileName">Not uploaded</span>
-        </div>
-        <div class="flex flex-col sm:flex-row gap-2 mt-4">
-          <button onclick="enableEdit()" class="bg-sky-500 text-white px-5 py-2 rounded hover:bg-sky-600">Edit</button>
-          <button onclick="deleteCV()" class="bg-yellow-500 text-white px-5 py-2 rounded hover:bg-yellow-600">Delete CV</button>
-          <button onclick="logout()" class="bg-red-500 text-white px-5 py-2 rounded hover:bg-red-600">Logout</button>
-        </div>
+<!-- Main Content -->
+<div class="flex-grow">
+  <div class="max-w-4xl mx-auto mt-10 bg-white rounded-lg shadow-md p-8">
+    <div class="flex flex-col items-center">
+      <img id="profileImage" src="img/default-profile.png" alt="Profile" class="w-28 h-28 rounded-full border mb-4" />
+      <h2 id="name" class="text-2xl font-semibold"> </h2>
+      <p id="email" class="text-gray-500"> </p>
+      <p id="bio" class="mt-2 text-center"> </p>
+      <p id="phone" class="text-gray-600 mt-1"> </p>
+      <div class="mt-2">
+        <span class="font-medium">CV:</span> <span id="cvFileName">Not uploaded</span>
       </div>
+      <div class="flex flex-col sm:flex-row gap-2 mt-4">
+        <button onclick="enableEdit()" class="bg-sky-500 text-white px-5 py-2 rounded hover:bg-sky-600">Edit</button>
+        <button onclick="deleteCV()" class="bg-yellow-500 text-white px-5 py-2 rounded hover:bg-yellow-600">Delete CV</button>
+        <button onclick="logout()" class="bg-red-500 text-white px-5 py-2 rounded hover:bg-red-600">Logout</button>
+      </div>
+    </div>
 
-      <!-- Editable Form -->
-      <form id="editForm" class="mt-8 space-y-4 hidden">
-        <input id="editName" type="text" class="w-full border rounded p-3" placeholder="Full Name" />
-        <input id="editEmail" type="email" class="w-full border rounded p-3" placeholder="Email" />
-        <input id="editPhone" type="text" class="w-full border rounded p-3" placeholder="Phone Number" />
-        <textarea id="editBio" class="w-full border rounded p-3" placeholder="Short Bio"></textarea>
-        <div>
-          <label class="block font-medium text-gray-700 mb-1">Upload CV</label>
-          <input type="file" id="cvUpload" accept=".pdf,.doc,.docx" class="w-full text-gray-600" />
-        </div>
-        <div class="flex justify-end gap-3">
-          <button type="button" onclick="cancelEdit()" class="bg-gray-300 px-5 py-2 rounded">Cancel</button>
-          <button type="button" onclick="saveProfile()" class="bg-sky-500 text-white px-5 py-2 rounded hover:bg-sky-600">Save</button>
-        </div>
-      </form>
+    <!-- Editable Form -->
+    <form id="editForm" class="mt-8 space-y-4 hidden">
+      <input id="editName" type="text" value="" class="w-full border rounded p-3" placeholder="Full Name" />
+      <input id="editEmail" type="email" value="" class="w-full border rounded p-3" placeholder="Email" />
+      <input id="editPhone" type="text" value="" class="w-full border rounded p-3" placeholder="Phone Number" />
+      <textarea id="editBio" class="w-full border rounded p-3" placeholder="Short Bio"></textarea>
+      <div>
+        <label class="block font-medium text-gray-700 mb-1">Upload Profile Image</label>
+        <input type="file" id="imageUpload" accept="image/*" class="w-full text-gray-600" />
+      </div>
+      <div>
+        <label class="block font-medium text-gray-700 mb-1">Upload CV</label>
+        <input type="file" id="cvUpload" accept=".pdf,.doc,.docx" class="w-full text-gray-600" />
+      </div>
+      <div class="flex justify-end gap-3">
+        <button type="button" onclick="cancelEdit()" class="bg-gray-300 px-5 py-2 rounded">Cancel</button>
+        <button type="button" onclick="saveProfile()" class="bg-sky-500 text-white px-5 py-2 rounded hover:bg-sky-600">Save</button>
+      </div>
+    </form>
+  </div>
+</div>
+
+<!-- Footer -->
+<footer class="bg-gradient-to-t from-transparent via-sky-300 to-sky-400 mt-16 text-white py-8" id="footer">
+  <div class="max-w-4xl mx-auto flex flex-col md:flex-row justify-between px-6">
+    <div>
+      <h2 class="font-bold text-lg">JobMatch</h2>
+      <p class="text-sm">Helping you find your next career opportunity.</p>
+    </div>
+    <div>
+      <h3 class="font-semibold text-sm mb-2">Contact Info</h3>
+      <p class="text-sm">Email: admin@jobmatch.com</p>
+      <p class="text-sm">Phone: +62 822-8749-8239</p>
     </div>
   </div>
+  <p class="text-center text-sm mt-4">&copy; 2025 JobMatch. All rights reserved.</p>
+</footer>
 
-  <!-- Footer -->
-  <footer class="bg-gradient-to-t from-transparent via-sky-300 to-sky-400 mt-16 text-white py-8" id="footer">
-    <div class="max-w-4xl mx-auto flex flex-col md:flex-row justify-between px-6">
-      <div>
-        <h2 class="font-bold text-lg">JobMatch</h2>
-        <p class="text-sm">Helping you find your next career opportunity.</p>
-      </div>
-      <div>
-        <h3 class="font-semibold text-sm mb-2">Contact Info</h3>
-        <p class="text-sm">Email: admin@jobmatch.com</p>
-        <p class="text-sm">Phone: +62 822-8749-8239</p>
-      </div>
-    </div>
-    <p class="text-center text-sm mt-4">&copy; 2025 JobMatch. All rights reserved.</p>
-  </footer>
 
   <script>
     function enableEdit() {
@@ -139,15 +137,24 @@
         localStorage.setItem('uploadedCV', cvName);
       }
 
+      const imageInput = document.getElementById('imageUpload');
+      if (imageInput.files.length > 0) {
+        const reader = new FileReader();
+        reader.onload = function (e) {
+          const base64Image = e.target.result;
+          document.getElementById('profileImage').src = base64Image;
+          localStorage.setItem('profileImage', base64Image);
+        };
+        reader.readAsDataURL(imageInput.files[0]);
+      }
+
       cancelEdit();
     }
 
     function deleteCV() {
       localStorage.removeItem('uploadedCV');
       document.getElementById('cvFileName').textContent = 'Not uploaded';
-      showCVToast("CV Deleted", "Your uploaded CV has been removed.");
     }
-
 
     function logout() {
       localStorage.removeItem("isLoggedIn");
@@ -175,17 +182,11 @@
         document.getElementById('phone').textContent = phone;
         document.getElementById('bio').textContent = bio;
       }
-      function showCVToast(title, message) {
-        const toast = document.getElementById("cvToast");
-        toast.querySelector("p.font-semibold").textContent = title;
-        toast.querySelector("p.text-sm").textContent = message;
-        toast.classList.remove("hidden");
 
-        setTimeout(() => {
-          toast.classList.add("hidden");
-        }, 3000);
+      const storedImage = localStorage.getItem("profileImage");
+      if (storedImage) {
+        document.getElementById("profileImage").src = storedImage;
       }
-
     }
   </script>
 
