--- a/public/account.html
+++ b/public/account.html
@@ -59,7 +59,7 @@
         <span class="font-medium">CV:</span> <span id="cvFileName">Not uploaded</span>
       </div>
       <div class="flex flex-col sm:flex-row gap-2 mt-4">
-        <button onclick="enableEdit()" class="bg-sky-500 text-white px-5 py-2 rounded hover:bg-sky-600">Edit</button>
+        <button onclick="enableEdit()" class="bg-sky-500 text-white px-5 py-2 rounded hover:bg-sky-600">Edit Profile</button>
         <button onclick="deleteCV()" class="bg-yellow-500 text-white px-5 py-2 rounded hover:bg-yellow-600">Delete CV</button>
         <button onclick="logout()" class="bg-red-500 text-white px-5 py-2 rounded hover:bg-red-600">Logout</button>
       </div>
