--- a/public/account.html
+++ b/public/account.html
@@ -107,10 +107,10 @@
   <script>
     function enableEdit() {
       document.getElementById('editForm').classList.remove('hidden');
-      document.getElementById('editName').value = document.getElementById('name').textContent;
-      document.getElementById('editEmail').value = document.getElementById('email').textContent;
-      document.getElementById('editPhone').value = document.getElementById('phone').textContent;
-      document.getElementById('editBio').value = document.getElementById('bio').textContent;
+      document.getElementById('editName') = document.getElementById('name').textContent;
+      document.getElementById('editEmail') = document.getElementById('email').textContent;
+      document.getElementById('editPhone') = document.getElementById('phone').textContent;
+      document.getElementById('editBio') = document.getElementById('bio').textContent;
     }
 
     function cancelEdit() {
